Closed Bug 1708536 Opened 3 years ago Closed 3 years ago

Crash in [@ mozilla::DecodedStream::SetVolume]

Categories

(Core :: Audio/Video: MediaStreamGraph, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- unaffected
firefox89 --- unaffected
firefox90 + fixed

People

(Reporter: aryx, Assigned: alwu)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Regression from this null check removal: https://hg.mozilla.org/mozilla-central/rev/3ee41652c2327be625f58cecc4778945d065fff1#l1.614

Crash report: https://crash-stats.mozilla.org/report/index/e9852823-4bbb-4af9-8b99-282c40210429

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0 xul.dll mozilla::DecodedStream::SetVolume dom/media/mediasink/DecodedStream.cpp:674
1 xul.dll mozilla::MediaDecoderStateMachine::VolumeChanged dom/media/MediaDecoderStateMachine.cpp:3068
2 xul.dll mozilla::detail::RunnableFunction<`lambda at /builds/worker/workspace/obj-build/dist/include/mozilla/StateWatching.h:248:34'>::Run xpcom/threads/nsThreadUtils.h:534
3 xul.dll mozilla::TaskQueue::DrainDirectTasks xpcom/threads/TaskQueue.cpp:272
4 xul.dll mozilla::AutoTaskDispatcher::TaskGroupRunnable::Run xpcom/threads/TaskDispatcher.h:224
5 xul.dll mozilla::TaskQueue::Runner::Run xpcom/threads/TaskQueue.cpp:208
6 xul.dll nsThreadPool::Run xpcom/threads/nsThreadPool.cpp:303
7 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1153
8 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:300
9 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:328
Flags: needinfo?(alwu)
Assignee: nobody → alwu
Flags: needinfo?(alwu)

Depends on D113823

Crash Signature: [@ mozilla::DecodedStream::SetVolume] → [@ mozilla::DecodedStream::SetVolume] [@ mozilla::DecodedStream::SetPlaybackRate]
Crash Signature: [@ mozilla::DecodedStream::SetVolume] [@ mozilla::DecodedStream::SetPlaybackRate] → [@ mozilla::DecodedStream::SetVolume] [@ mozilla::DecodedStream::SetPlaybackRate]
Pushed by padenot@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1909d94fa9f5
prevent accessing null 'mData'. r=padenot
Blocks: 1708790
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: