Bug 1708536 - prevent accessing null 'mData'. r=padenot

Depends on D113823

Differential Revision: https://phabricator.services.mozilla.com/D113855